# iMars3D

./: .binstar.yml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .yamllint  CODE_OF_CONDUCT.md  Installation.html  LICENSE  LICENSE.txt  README.md  README.rst  Tutorials.html  _tmp.archive.src  codecov.yaml  conda_development.yml  conda_environment.yml  environment.yml  genindex.html  img1.npy  img1.tiff  index.html  meta.yaml  objects.inv  pipelineDemo.py  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py  wizardDemo.py
.github/: stale.yml
.github/workflows/: actions.yml  codeql.yml  ornl-analysis.yml  ornl-prod.yml  ornl-qa.yml  protected_branches.yml  unittest.yml
_sources/: Tutorials.txt
builders/: download-testdata-fromS3.py  download-testdata.py  gh-pages  setup-aws-testconfig.py
builders/travis/: before_install.sh  install.sh  script.sh
conda.recipe/: meta.yaml
dev_docs/: conf.py  index.rst
dev_docs/dev_process/: overview.rst  release.rst  ui_developmentGuide.rst
doc/: Makefile  conf.py  index.rst  make.bat
doc/source/: about.rst  api.rst  credits.rst  faq.rst  install.rst
doc/source/api/: ivenus.config.rst  ivenus.det.rst  ivenus.filter.rst  ivenus.io.rst  ivenus.sim.rst
docs/: .gitignore  Makefile  conf.py  dev_notes.rst  environment_rtd.yml  index.rst  make.bat
docs/api/: imars3d.backend.corrections.rst  imars3d.backend.dataio.rst  imars3d.backend.diagnostics.rst  imars3d.backend.io.rst  imars3d.backend.morph.rst  imars3d.backend.preparation.rst  imars3d.backend.rst  imars3d.backend.workflow.rst  imars3d.rst  imars3d.ui.rst  imars3d.ui.stages.rst  imars3d.ui.widgets.rst  modules.rst
docs/developer/: environment.rst  highlevel_design.rst  index.rst  integration_test.rst  multiprocessing.rst  overview.rst  paramterizedFunction.rst  release.rst  ui_test.rst  workflow.rst
docs/developer/media/: load_data.puml
docs/developers/: multiprocessing.rst  ui_test.rst
docs/releasenotes/: index.rst
docs/usageScenarios/: automatic_reconstruction_scenario.rst  command_line_scenario.rst  notebook_scenario.rst
docs/users/: index.rst
docs/users/tutorial/: index.rst
imars3d/: AbstractImageSeries.py
imars3d/components/: __init__.py
imars3d/filters/: cropping.py
imars3d/jnbui/: ct_wizard.py  imageslider.py
imars3d/recon/: use_tomopy.py
imars3d/tilt/: direct.py
imars_test/: integration_test_dev.html  integration_test_dev.ipynb
ipynb/: denoising.ipynb
ivenus/: __init__.py  config.py  det.py  filter.py  io.py  sim.py
notebooks/: Cu block.ipynb  TomoRecon-UI.ipynb  TomoRecon-UI2.ipynb  TomoRecon-UI_v2.ipynb  denoising.ipynb  gamma_filtering.ipynb  tomopy.ipynb  turbine.ipynb
python/iVenus/: io.py
python/iVenus/config/: __init__.py
python/iVenus/detector_correction/: __init__.py  retrieve_mcp_chips_offset.py
python/iVenus/filters/: __init__.py  gamma_filtering.py
python/imars3d/: AbstractImage.py  AbstractImageSeries.py  CT.py  CTProcessor.py  CT_from_TIFF_metadata.py  ImageFile.py  ImageFileSeries.py  __init__.py  autocrop.py  decorators.py  shutils.py
python/imars3d/components/: __init__.py  ifc.py  projection.py  projection_mp.py  recon.py  tilt.py
python/imars3d/detector_correction/: __init__.py  fill_gap_between_chips.py  fix_dead_pixels.py  install_chips_in_new_detector.py  retrieve_mcp_chips_offset.py
python/imars3d/filters/: batch.py  cropping.py  gamma_filtering.py  ifc.py  normalizer.py  ring_artifact_removal_Ketcham.py  smoothing.py
python/imars3d/jnbui/: __init__.py  _utils.py  ct_wizard.py  ct_wizard2.py  fileselector.py  imageslider.py  test_file_selector.ipynb  test_image_slider.ipynb  tomoreconui.py
python/imars3d/recon/: mpi.py  use_tomopy.py
python/imars3d/tilt/: __init__.py  direct.py  find_rot_center.py  phasecorrelation.py  use_centers.py
python/ivenus/: AbstractImage.py  AbstractImageSeries.py  ImageFile.py  ImageFileSeries.py  __init__.py  components.py  io.py
python/ivenus/components/: __init__.py  tilt.py
python/ivenus/detector_correction/: retrieve_mcp_chips_offset.py
python/ivenus/filters/: normalizer.py
python/ivenus/sim/: __init__.py
python/ivenus/tilt/: __init__.py  phasecorrelation.py  smooth.py
references/presentations/: imars3d.pptx
scripts/: imars3dui.py  reduce_CG1D.py  reduce_CG1D_config_template.json  start_imars3dui.sh
src/imars3d/: AbstractImage.py  AbstractImageSeries.py  CT.py  CTProcessor.py  CT_from_TIFF_metadata.py  ImageFile.py  ImageFileSeries.py  __init__.py  autocrop.py  decorators.py  io.py  shutils.py
src/imars3d/backend/: __init__.py  __main__.py  _version.py  autoredux.py  pyproject.toml  reconstruction.py  setup.cfg  validation.py
src/imars3d/components/: __init__.py  projection.py  projection_mp.py  recon.py  tilt.py
src/imars3d/config/: __init__.py  detector_dead_pixels.yml
src/imars3d/detector_correction/: fill_gap_between_chips.py  fix_dead_pixels.py  install_chips_in_new_detector.py  retrieve_mcp_chips_offset.py  retrieve_mcp_dead_pixels.py
src/imars3d/filters/: __init__.py  batch.py  cropping.py  gamma_filtering.py  ifc.py  normalizer.py  ring_artifact_removal_Ketcham.py  ring_removal.py  rotation.py  smoothing.py  tilt.py
src/imars3d/jnbui/: _utils.py  ct_wizard.py  fileselector.py  imageslider.py  (+1 more)
test/: test_config.py  test_det.py  test_filter.py  test_io.py  test_sim.py
tests/: __init__.py  conftest.py  getdata.py  remove_outliers.py  test_progressbar.py
tests/autorecon/: Test0.py  Test_OB.py  Test_center.py  Test_diapers.py  Test_tilt.py  test1.py  test2.py
tests/data/: readme.md
tests/iVenus/: signon.py
tests/imars3d/: imars3d.conf  signon.py  test_CT.py  test_CT_utils.py  test_autocrop.py  test_components.py  test_recon_chain.py
tests/integration/: readme.md
tests/ivenus/: signon.py  test_components.py
tests/legacy/: getdata.py  test_progressbar.py
tests/system/: readme.md
tests/ui_prototype/: README.md  test_pipelineDemo.py
tests/unit/: readme.md
tests/workflows/: recon_gather.py  turbine-fromnotebook.py  turbine.py  vis.ipynb
(+282 files in other folders)
