[metadata]
name = imars3d
version = 0.1.3
author = iMars3D and SCSE team
description = Neutron imaging data analysis at ORNL
keywords = Neutron imaging
long_description = file: README.md, LICENSE
license = BSD 3-Clause License
url = https://github.com/ornlneutronimaging/iMars3D
project_urls =
    Bug Tracker = https://github.com/ornlneutronimaging/iMars3D/issues
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
python_requires = >= 3.7
install_requires =
    astropy
    tomopy
    dxchange
    pooch

[options.packages.find]
where = src
exclude =
    tests
    notebooks

[options.extras_require]
tests = pytest

[aliases]
test = pytest

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120

[tool:pytest]
testpaths = tests
python_files = *test*.py
norecursedirs = .git tmp* _tmp* __pycache__ *dataset* *data_set*

[coverage:run]
source = src/imars3dv2
omit = */tests/* src/imars3dv2/widgets_prototype/*
