[metadata]
name = imars3d
version = 0.1.3
author = iMars3D and SCSE team
description = Neutron imaging data analysis at ORNL
keywords = Neutron imaging
long_description = file: README.md, LICENSE
license = BSD 3-Clause License
url = https://github.com/ornlneutronimaging/iMars3D
project_urls =
    Bug Tracker = https://github.com/ornlneutronimaging/iMars3D/issues
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires = >= 3.8
# install_requires is skipped for the following reasons:
# 1. tomopy is not available on PyPI
# 2. readthedoc invokes pip install with `--upgrade`, which can mess up the
#    dependency resolved by conda in previous step.
# 3. we will only use wheel to check package content, and the pacakge distribution
#    is done by conda.

[options.packages.find]
where = src
exclude =
    tests
    notebooks

[options.extras_require]
tests = pytest

[aliases]
test = pytest

[flake8]
ignore = E203, E266, E501, W503, F403, F401
exclude = conda.recipe/meta.yaml
max-line-length = 120

[tool:pytest]
testpaths = tests
python_files = *test*.py
norecursedirs = .git tmp* _tmp* __pycache__ *dataset* *data_set*

[coverage:run]
source = src/imars3d
omit =
        */tests/*
        src/imars3d/__init__.py
        src/imars3d/ui/*

[coverage:report]
fail_under = 60
